--- a/Pemaland/nbproject/project.properties
+++ b/Pemaland/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TubesPBO
-main.class=Pemaland.Pemaland
+main.class=Pemaland.Homepage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
