--- a/Pemaland/nbproject/project.properties
+++ b/Pemaland/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/TubesPBO
 excludes=
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\muhst\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\muham\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-2=D:\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar-1}
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
